--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./css/main.css" />
     <title>To_Do_App</title>
   </head>
@@ -59,7 +62,7 @@
         </li>
       </ul>
 
-      <a href="#" class="link">
+      <a href="./app.html" class="link">
         <div class="link_btn-effect"></div>
         <button class="link-btn" type="button">
           <span class="txt">Continue</span>
