status modal added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <nav class="nav">
-        <span class="nav-title">Theme</span>
+        <span class="nav-title">THEME</span>
       </nav>
     </header>
     <div class="thems_wrapper">
