arrow and some transition added

--- a/app.html
+++ b/app.html
@@ -107,8 +107,9 @@
               <h3 class="task-title" data-id="tomorrow_task-list" >Tomorrow</h3><span class="task_count">0</span>
             </div>
             <ul class="task_list tomorrow_task-list">
-              <li class="task_list-li">hjasd</li>
-              <li class="task_list-li">hjasd</li>
+              <li class="task_list-li"> <span class="priority" ></span> hjasd</li>
+              <li class="task_list-li"><span class="priority" ></span>hjasd</li>
+              
               
             </ul>
           </div>
