form update added

--- a/app.html
+++ b/app.html
@@ -80,7 +80,7 @@
                 <h3 class="update-priority" >change priority:<span class="update_priority"  ></span></h3>
               </div>
                 <div class="form-end">
-                  <button class="delete-task" >Delete Task</button>
+                  <button type="button" class="delete-task" >Delete Task</button>
                    <button  type="submit"  class="update-save" >Save Changes</button>  
                 </div>
             </form>
