local Storage added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <body>
     <header>
       <nav class="nav">
-        <span class="nav-title">THEME</span>
+        <ul class="nav_ul">
+          <li class="nav_ul-li"><a href="#">To_Do_App</a></li>
+         
+        </ul>
       </nav>
     </header>
     <div class="thems_wrapper">
