--- a/app.html
+++ b/app.html
@@ -34,7 +34,7 @@
             <div class="form_about">
            <input class="form_about-task" placeholder="I want to.." type="text">
          <ul class="form_about_type" >
-           <li class="type" data-id="today" ><i class="fas fa-bell"></i>Today </li>
+           <li class="default-type type task_type-selected" data-id="today" ><i class="fas fa-bell"></i>Today </li>
            <li class="type" data-id="tomorrow" ><i class="fas fa-bell"></i>Tomorrow</li>
            <li class="type" data-id="nextWeek" ><i class="fas fa-bell"></i>next Week</li>
          </ul>
@@ -52,10 +52,10 @@
               <label class="label form_details_time-set priority ">important</label>
           </div>
 
-          <div class="form_details_time ">
+          <!-- <div class="form_details_time ">
             <h4 class="form_details_time-title"  > Time</h4>
               <label class="label form_details_time-set set-time">Today </label>
-          </div>
+          </div> -->
          
          </div>
         </div>  
