--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
         </button></a
       >
     </div>
-    <script src="./main.js "></script>
+    <script type="module" src="./main.js "></script>
   </body>
 </html>
